fix overflow community

--- a/front/css/styleFrontTheo.css
+++ b/front/css/styleFrontTheo.css
@@ -209,7 +209,8 @@ td{
     flex-wrap: nowrap;
     gap: 10px;
     margin-top: 20px;
-    overflow-x: auto;
+    overflow: hidden;
+    overflow-x: scroll;
     white-space: nowrap;
     
 }
